New, Patch, Updates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Video Site Template</title>
+  <title>PORNSTERS</title>
+  <link rel="icon" type="image/png" href="/mini.png" sizes="32x32" />
     <script src="https://cdn.tailwindcss.com"></script>
   <script type="importmap">
 {
@@ -30,7 +31,7 @@
     animation: fadeInUp 0.6s ease-out forwards;
   }
 </style>
-<link rel="stylesheet" href="/index.css">
+<!-- <link rel="stylesheet" href="/index.css"> -->
 </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
