--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta name="juicyads-site-verification" content="95f7d229c9e280700e571cc144e56fa9">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PORNSTERS</title>
-  <link rel="icon" type="image/png" href="/mini.png" sizes="32x32" />
+    <title>PORNSTERS</title>
+    <link rel="icon" type="image/png" href="/mini.png" sizes="32x32" />
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1RZKGPS679"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-1RZKGPS679');
+    </script>
+    
     <script src="https://cdn.tailwindcss.com"></script>
   <script type="importmap">
 {
