--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     height: 100%;
     background-color: #0a0a0a !important;
     color: #fafafa !important;
+    overflow-x: hidden; /* Prevent horizontal scroll */
+    width: 100vw;
+    max-width: 100vw;
+    box-sizing: border-box;
   }
   
   /* Force dark mode */
@@ -48,6 +52,41 @@
     padding: 0;
     min-height: 100vh;
     background-color: #0a0a0a !important;
+    width: 100%;
+    max-width: 100vw;
+    overflow-x: hidden; /* Prevent horizontal scroll */
+    box-sizing: border-box;
+  }
+  
+  /* Global box-sizing and overflow control */
+  *, *::before, *::after {
+    box-sizing: border-box;
+    max-width: 100%;
+  }
+  
+  /* Prevent common overflow sources */
+  .container, .grid, .flex, div, section, article, main {
+    max-width: 100%;
+    box-sizing: border-box;
+  }
+  
+  /* Responsive images and media */
+  img, video, canvas, iframe {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  /* Prevent text overflow */
+  pre, code {
+    overflow-wrap: break-word;
+    word-break: break-all;
+    max-width: 100%;
+  }
+  
+  /* Prevent table overflow */
+  table {
+    max-width: 100%;
+    table-layout: auto;
   }
   
   /* Force all elements to respect dark theme */
